<resources>
    <string name="app_name">PlayMe</string>
    <string name="developer_name">Sanket Satpute</string>
    <string name="songs">Songs</string>
    <string name="playlist">Playlist</string>
    <string name="album">Album</string>
    <string name="app_mail_id">playmeplayermail@gmail.com</string>
    <string name="developer_mail_id">ssatpute738@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="title_activity_player_navigation">PlayerNavigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_top_navigation">TopNavigationActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="size">SIZE</string>
    <string name="date">DATE</string>
    <string name="alphabetical">ALPHABETICAL</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="equalizer">Equalizer</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="themes">Themes</string>
    <string name="remove_all">All</string>
    <string name="play_all">Play All</string>
    <string name="delete">Delete</string>
    <string name="detail_s">Detail\'s</string>
    <string name="song_s">Song\'s</string>
    <string name="no_result_found">No Result Found</string>
    <string name="album_s">Album\'s</string>
    <string name="artist_s">Artist\'s</string>
    <string name="more">More</string>
    <string name="remove_from_playlist">Remove Song</string>
    <string name="add_to_playlist">Add Song</string>
    <string name="music_playback">Music Playback</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="song_info">Song Info</string>
    <string name="delete_song">Delete Song</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_playlist_second">Add To Playlist</string>
    <string name="share">Share</string>
    <string name="set_as_ringtone">Set As Ringtone</string>
    <string name="fevourite">Favourite</string>
    <string name="recent_played">Recent Played</string>
    <string name="create_new">Create</string>
    <string name="sort_by">Sort By</string>
    <string name="by_name">Name</string>
    <string name="by_date">Date</string>
    <string name="by_size">Size</string>
    <string name="customize">Customize</string>
    <string name="edit">Edit</string>
    <string name="translateX">translateX</string>
    <string name="see_less">See Less</string>
    <string name="enter_playlist_creator_name">Enter Playlist Creator Name</string>
    <string name="new_playlist">Create Playlist</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="my_recent_played">My Recent\nPlayed</string>
    <string name="no_song_available">No Song Available</string>
    <string name="now_playing">Now Playing</string>
    <string name="shuffle">Shuffle</string>
    <string name="play_song_s">Play Song\'s</string>
    <string name="play">Play</string>
    <string name="back">BACK</string>
    <string name="like">Like</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="_00">00</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="scan_song_s">Scan Song\'s</string>
    <string name="general">General</string>
    <string name="headphone_setting_s">Headphone Setting\'s</string>
    <string name="list_or_grid_mode">List or Grid Mode</string>
    <string name="add_to_playlist_2">Add To Playlist</string>
    <string name="add_to_playing_queue">Add to Playing Queue</string>
    <string name="tag_editor">Tag Editor</string>
    <string name="delete_full_album">Delete Full Album</string>
    <string name="align_tool">Align Tool</string>
    <string name="up_next">Up Next</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="tabs">Tabs</string>
    <string name="background">BACKGROUND</string>
    <string name="my_nfevourite">My \nFavourite</string>
    <string name="no_data_found">No Data Found !!</string>
    <string name="it_s_realme">it\'s realme</string>
    <string name="realme">realme</string>
    <string name="no_lyrics">no lyrics</string>
    <string name="music">Music</string>
    <string name="song">Song</string>
    <string name="artist">Artist</string>
    <string name="bilal_saeed">Bilal Saeed</string>
    <string name="add_to_fevourite">Add to Fevourite</string>
    <string name="expand">EXPAND</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="name">Name</string>
    <string name="creator">Creator</string>
    <string name="totle_song_s">Totle Song\'s</string>
    <string name="playlist_detail">Playlist Detail</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="theme">Theme</string>
    <string name="customize_for_you">Customize for you</string>
    <string name="playback_records">playback records</string>
    <string name="refresh">REFRESH</string>
    <string name="off_txt">off</string>
    <string name="liked">liked</string>
    <string name="core_setting_s">Core Setting\'s</string>
    <string name="autoplay_next_song">Autoplay Next Song</string>
    <string name="gessture_play">Gesture Play</string>
    <string name="shake_to_play">Shake to Play</string>
    <string name="shaking_force">Shaking Force</string>
    <string name="shake_left_to_play_next_song_shake_right_to_play_previous_song_shake_front_to_play_amp_pause_the_song"><![CDATA[shake left to play Next Song, shake right to play previous song, Shake front to play & pause the song]]></string>
    <string name="shake_to_next">Shake to Next</string>
    <string name="shake_the_phone_for_play_the_next_song">Shake Phone for Play the Next Song</string>
    <string name="shake_with_option_s">Shake with Option\'s</string>
    <string name="select_multiple">Select Multiple</string>
    <string name="others">Others</string>
    <string name="feedback">Feedback</string>
    <string name="share_playme">Share PlayMe</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="desc">Desc</string>
    <string name="asc">Asc</string>
    <string name="order_by">Order By</string>
    <string name="playlist_detail_s">Playlist Detail\'s</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="display">Display</string>
    <string name="bluetooth_auto_stop_when_device_connected">Bluetooth Auto Stop When Device Connected</string>
    <string name="headset_control_allow">Headset Control Allow</string>
    <string name="bluetooth_auto_start_when_device_connected">Bluetooth Auto Start When Device Connected</string>
    <string name="play_when_inserted">Play When Inserted</string>
    <string name="headphone">Headphone</string>
    <string name="pause_when_plugged">Pause When Plugged</string>
    <string name="times">times</string>
    <string name="min">min</string>
    <string name="music_played">Music Played</string>
    <string name="listening_time">Listening time</string>
    <string name="player_design">Player Design</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen_amp_notification"><![CDATA[Lock Screen & Notification]]></string>
    <string name="on">on</string>
    <string name="add">Add</string>
    <string name="most_played">Most Played</string>
    <string name="recent_album">Recent Album</string>
    <string name="recent_artist">Recent Artist</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_songs">Clear Songs</string>
    <string name="clear_album">Clear Album</string>
    <string name="clear_artist">Clear Artist</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="up_to_date">Up to Date</string>
    <string name="duration">Duration</string>
    <string name="path">Path</string>
    <string name="size_2">Size</string>
    <string name="no_song_s_found">No Song\'s Found</string>
    <string name="visulizer">Visulizer</string>
    <string name="bottom_design">Bottom Design</string>
    <string name="choose_background_type">Choose Background Type</string>
    <string name="player_background">Player Background</string>
    <string name="round_player">Round Player</string>
    <string name="previous">previous</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="themes_amp_accent_color"><![CDATA[Themes & Accent Color]]></string>
    <string name="mail_us">Mail Us</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="select_color">Select Color</string>
    <string name="set_speed">Set Speed</string>
    <string name="square_player">Square Player</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the Current Playing Music</string>
    <string name="no_recent_songs">No Recent Songs</string>
    <string name="no_recent_artist_found">No Recent Artist Found</string>
    <string name="no_recent_album_found">No Recent Album Found</string>
    <string name="current_playing_next">Current Playing / Next</string>
    <string name="hash_sign">#</string>
    <string name="lyrics">Lyrics</string>
    <string name="choose_bottom">Choose Bottom</string>
    <string name="list">LIST</string>
    <string name="frames">FRAMES</string>
    <string name="expand_button_enable_disable">Expand Button Enable / Disable</string>
    <string name="no_most_played_song_found">No Most Played Song Found</string>
    <string name="modify_setting">Modify Setting</string>
    <string name="advance_setting">Advance Setting</string>
    <string name="player_activity">Player Activity</string>
    <string name="main_activity">Main Activity</string>
    <string name="lock_screen_38_notification"><![CDATA[Lock Screen & Notification]]></string>
    <string name="see_changelog">See ChangeLog</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="developed_amp_designed_by"><![CDATA[Developed & Designed by]]></string>
    <string name="store_songs_for">Store Songs for</string>
    <string name="days">days</string>
    <string name="go_recent_album">Go Recent Album</string>
    <string name="go_recent_song">Go Recent Song</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="creator_name">Creator Name</string>
</resources>