<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_24"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle"
        android:title="@string/home"
        />

    <item
        android:id="@+id/search"
        android:icon="@drawable/search_24nfill"
        app:showAsAction="always"
        tools:ignore="MenuTitle"
        android:title="@string/search"
        />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/settings_24"
        app:showAsAction="always"
        android:title="@string/setting"
        tools:ignore="MenuTitle" />
</menu>