<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/clear_all"
        android:id="@+id/clear_all"
        app:showAsAction="never"
        />
    <item
        android:title="@string/clear_songs"
        android:id="@+id/clear_song"
        app:showAsAction="never"
        />
    <item
        android:title="@string/clear_playlist"
        android:id="@+id/clear_album"
        app:showAsAction="never"
        />
    <item
        android:title="@string/clear_playlist"
        android:id="@+id/clear_artist"
        app:showAsAction="never"
        />
    <item
        android:title="@string/clear_playlist"
        android:id="@+id/clear_playlist"
        app:showAsAction="never"
        />
</menu>