<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        android:textSize="22sp"
        android:textStyle="normal"
        android:layout_marginTop="30dp"
        android:textColor="?attr/color"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_outer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pitch"
        android:layout_marginTop="25dp"
        android:hint="@string/playlist_name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/creator_name_outer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/creator_name"
        app:layout_constraintTop_toBottomOf="@id/pitch">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            app:strokeColor="@android:color/darker_gray"
            style="?attr/buttonBarButtonStyle"
            android:backgroundTint="@android:color/transparent"
            app:elevation="0dp"
            android:elevation="0dp"
            app:strokeWidth="0.8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_playlist"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/create_new"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:paddingHorizontal="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_btn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>