<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/artist_img_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:cardCornerRadius="100dp"
            android:backgroundTint="@color/day_dark"
            android:background="@color/day_dark"
            >
            <ImageView
                android:id="@+id/artist_src"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_artist"
                android:contentDescription="@string/artist_s"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/artist_img_card"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/size"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_round_arrow_down_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:rotation="270"
            android:contentDescription="@string/more"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>