<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/transparent"
    android:elevation="0dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    android:id="@id/main_card"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/day_dark"
            android:background="@color/day_dark">

            <ImageView
                android:id="@+id/song_art"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/ic_music"
                android:adjustViewBounds="true"
                android:contentDescription="@string/songs" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songname"
            android:maxWidth="160dp"
            android:padding="2dp"
            android:textSize="16sp"
            android:singleLine="true"
            android:text="@string/name"
            android:fontFamily="@font/baloo_bhai"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/card1"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            android:textSize="12sp"
            android:padding="2dp"
            app:layout_constraintLeft_toRightOf="@+id/card1"
            android:layout_marginStart="15dp"
            android:text="@string/artist"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/songname"
            tools:layout_editor_absoluteY="5dp"
            android:fontFamily="@font/baloo_bhai"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>